fix ui bug on smaller screens

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -83,9 +83,23 @@ body {
 
   .spacer {
     flex: 1 1 auto;
+  }
+}
 
-    @media (max-width: 768px) {
-      display: none;
-    }
+@media (max-width: 760px) {
+  .responsive-toolbar {
+    height: 7rem !important;
+  }
+}
+
+@media (max-width: 320px) {
+  .responsive-toolbar {
+    height: 10rem !important;
+  }
+}
+
+@media (max-width: 245px) {
+  .responsive-toolbar {
+    height: 13rem !important;
   }
 }
